Fix whitespace wrapping on ansii output

--- a/src/vs/workbench/contrib/positronNotebook/browser/notebookCells/CellTextOutput.css
+++ b/src/vs/workbench/contrib/positronNotebook/browser/notebookCells/CellTextOutput.css
@@ -8,4 +8,5 @@
 		var(--monaco-monospace-font)
 	);
 	font-size: var(--vscode-positronNotebook-text-output-font-size);
+	white-space: pre-wrap;
 }
